--- a/index.html
+++ b/index.html
@@ -52,10 +52,6 @@
                 <a class="nav-link" href="#">Ayuda y soporte</a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Buscar</button>
-            </form>
             <div class="col-md-2 col-2 "></div>
           </div>
         </div>
@@ -132,7 +128,8 @@
 
 <!--Inicio cajas -->
 <div class="container">
-<div class="col-md-6" style="background-color: #868b91;" > 
+  <div class="row">
+<div class="col-md-7 col-6" style="background-color: #868b91;" > 
   <form>
     <label for="inputState" class="form-label"> ¿Que te gustaria estudiar?</label>
        <div class="col-md-4">
@@ -157,21 +154,43 @@
          <label class="form-check-label" for="exampleCheck1">Solo programas con oferta de formacion disponible</label>
          <button type="button" class="btn btn-success" style="background-color: #39a900;">buscar</button>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-5 col-4">
         <div class="card w-50">
           <div class="card-body">
             <p class="card-text"><b>Registrese</b> para inscribirse a los programas de formacion</p>
-            <a href="#" class="btn btn-success">registrarse</a>
+            <a href="#" class="btn btn-success" style="background-color: #39a900;">Registrarse</a>
           </div>
         </div>
+
         <div class="card w-50">
           <div class="card-body">
             <p class="card-text"><b>Ingrese</b> para acceder al sisitema si ya esta registrado</p>
-            <a href="#" class="btn btn-success">Ingresar</a>
+            <a href="#" class="btn btn-success" style="background-color: #39a900;">Ingresar</a>
           </div>
         </div>
       </div>
       </div>
+    </div>
+
+    <!--botones de ayuda-->
+<div class="row">
+  <div class="col-md-1 col-1"></div>
+  <div class="d-grid gap-2 col-md-12 d-md-block text-center">
+    <button class="btn btn-success" type="button" style="background-color: #17aeae;">¿Nesecitas una busqueda mas sencilla?</button>
+    <button class="btn btn-success" type="button" style="background-color: #17aeae;">¿Olvido su contraseña?</button>
+  </div>
+
+  <div class="col-md-1 col-1"></div>
+</div>
+
+    <!--/botones de ayuda-->
+
+
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
     </body>
